--- a/003 Install/Исследование контейнера.md
+++ b/003 Install/Исследование контейнера.md
@@ -38,7 +38,7 @@ docker run --name my_nginx -d nginx
 
 После входа в контейнер, вы найдете компоненты системы по следующим путям:
 
-- **`/opt/module/starrocks/`** – основной каталог установки. Внутри него расположены:
+- **`/data/deploy/starrocks/`** – основной каталог установки. Внутри него расположены:
     - **`fe/`** – каталог компонента Frontend (FE)
     - **`be/`** – каталог компонента Backend (BE)
     - **`apache_hdfs_broker/`** – каталок брокера для работы с HDFS
