Update Вставка одиночных строк.md

--- a/001 Overview/Вставка одиночных строк.md
+++ b/001 Overview/Вставка одиночных строк.md
@@ -1,3 +1,4 @@
+# Общий механизм
 StarRocks справляется с этой ситуацией **совершенно иначе**, чем ClickHouse, и в этом одно из его ключевых архитектурных преимуществ.
 
 ### 🆚 Сравнение подходов к частым мелким вставкам
@@ -56,3 +57,89 @@ StarRocks не оставляет вас один на один с этой пр
 *   **Рекомендация:** Для высоконагруженных OLTP-подобных сценариев используйте **пакетную вставку** или интеграцию через **Apache Kafka**, где данные накапливаются в микропакетах перед вставкой в StarRocks.
 
 **Вывод:** StarRocks справляется с частыми мелкими вставками **лучше**, чем ClickHouse, благодаря своей модели версионности и автоматической компакции, но это все равно **анти-паттерн**, которого следует избегать для оптимальной производительности.
+
+# Интеграция с Кафка
+
+Кафка **не отдает данные по одной строке** по умолчанию при использовании с такими системами, как StarRocks. Весь фокус в **буферизации и пакетной обработке** на стороне коннектора.
+
+### ⚙️ Как работает интеграция Kafka -> StarRocks
+
+Вот пошаговый процесс, который показывает, как Кафка спасает от проблемы одиночных вставок:
+
+```
+[Kafka Topic]
+    |
+    | (1) Consumer Poll - забирает *пачку* сообщений
+    v
++-----------------------------------------------------------------+
+| [StarRocks Connector]                                           |
+|                                                                 |
+|  +---------------------+    +-------------------+               |
+|  | Буфер в памяти      | -> | Накопившийся      | -> (2) Пакетная |
+|  | (накапливает        |    | пакет (Batch)     |     вставка в   |
+|  |  сообщения)         |    | ~10-50k строк     |     StarRocks   |
+|  +---------------------+    +-------------------+               |
++-----------------------------------------------------------------+
+                                                                   |
+                                                                   v
+                                                             [StarRocks BE]
+                                                             (Создается 1 Rowset)
+```
+
+### 🔍 Ключевые механизмы буферизации (что предотвращает 1 млн сегментов)
+
+**1. `batch.size` (или аналогичный параметр)**
+*   **Что делает:** Коннектор не отправляет каждое сообщение в StarRocks сразу. Он накапливает их в буфер в памяти.
+*   **Пример:** Устанавливается `batch.size = 10000`. Это значит, что коннектор будет ждать, пока не накопится 10 000 сообщений, и только тогда отправит их одной операцией в StarRocks.
+*   **Результат:** Вместо 1 млн отдельных INSERT - всего **100 пакетных вставок**.
+
+**2. `linger.ms`**
+*   **Что делает:** Таймер, который определяет максимальное время ожидания для формирования пакета.
+*   **Пример:** `linger.ms = 1000` (1 секунда). Даже если за 1 секунду не набралось 10 000 сообщений, коннектор все равно отправит то, что есть.
+*   **Результат:** Гарантирует, что данные не будут "застревать" в буфере при низкой нагрузке.
+
+**3. Параллелизм и партиционирование Кафки**
+*   **Что делает:** Если в топике Кафки несколько партиций, коннектор может создать несколько параллельных задач потребления.
+*   **Пример:** Топик с 10 партициями → 10 консумеров → 10 независимых буферов → 10 параллельных пакетных вставок в разные таблеты StarRocks.
+*   **Результат:** Пропускная способность увеличивается, но каждый отдельный поток все равно вставляет пачками.
+
+### 📊 Сравнение сценариев
+
+| Сценарий | Количество Rowsets | Производительность |
+| :--- | :--- | :--- |
+| **1 млн отдельных JDBC INSERT** | ~1 млн Rowsets | **Катастрофическая** |
+| **Кафка без настройки** | ~1 млн Rowsets | Плохая |
+| **Кафка с `batch.size=1000`** | **~1000 Rowsets** | **Приемлемая** |
+| **Кафка с `batch.size=10000`** | **~100 Rowsets** | **Хорошая** |
+
+### 🛠️ Практическая настройка
+
+Вот как выглядели бы типичные параметры коннектора:
+
+```properties
+# Максимальное количество сообщений в одном пакете
+batch.size = 10000
+
+# Максимальное время ожидания формирования пакета (мс)
+linger.ms = 1000
+
+# Максимальный размер пакета в байтах
+batch.bytes = 10485760  # 10 MB
+```
+
+### 💡 Реальный пример работы
+
+1.  **Входящий поток:** 1000 сообщений/секунду в Kafka
+2.  **Настройки коннектора:** `batch.size = 5000`, `linger.ms = 5000`
+3.  **Что происходит:**
+    *   Коннектор начинает накапливать сообщения
+    *   Через 5 секунд набирается ~5000 сообщений
+    *   **ОДНА** пакетная вставка 5000 строк в StarRocks
+    *   Создается **ОДИН** Rowset вместо 5000
+4.  **Итог:** Из 86400 сообщений в день создается всего ~17 Rowsets вместо 86400
+
+### 🎯 Вывод
+
+**Кафка спасает не просто "чтением", а интеллектуальной буферизацией на стороне коннектора.** Она превращает непрерывный поток отдельных сообщений в дискретные пакеты оптимального размера, которые StarRocks может эффективно обрабатывать.
+
+Именно этот механизм **буферизации + пакетной вставки** делает связку Kafka + StarRocks устойчивой к проблеме "version avalanche", в то время как прямые одиночные INSERT'ы через JDBC эту проблему усугубляют.
