--- a/001 Overview/Вставка одиночных строк.md
+++ b/001 Overview/Вставка одиночных строк.md
@@ -143,3 +143,101 @@ batch.bytes = 10485760  # 10 MB
 **Кафка спасает не просто "чтением", а интеллектуальной буферизацией на стороне коннектора.** Она превращает непрерывный поток отдельных сообщений в дискретные пакеты оптимального размера, которые StarRocks может эффективно обрабатывать.
 
 Именно этот механизм **буферизации + пакетной вставки** делает связку Kafka + StarRocks устойчивой к проблеме "version avalanche", в то время как прямые одиночные INSERT'ы через JDBC эту проблему усугубляют.
+
+# Прочие CDC-поставщики данных
+Проблема решается в общем случае **буферизацией и пакетной обработкой на стороне коннектора**. И да, этот подход применим не только к Kafka!
+
+### 🎯 Общий принцип: любой коннектор можно настроить на пакетную обработку
+
+Ключевая идея: **Любой качественный коннектор для аналитических СУБД ДОЛЖЕН поддерживать пакетную обработку**, потому что одиночные вставки — это антипаттерн для column-oriented систем.
+
+### 🔄 Коннекторы StarRocks и их настройки
+
+**1. Встроенные коннекторы StarRocks:**
+- **Flink Connector** - имеет `batch.size`, `flush.interval`
+- **Spark Connector** - автоматически буферизует данные перед вставкой
+- **DataX** - имеет параметры `batchSize`
+- **Airbyte** - настраивается через `batch_size`
+
+**2. CDC-системы (включая PeerDB):**
+
+**Да, PeerDB и подобные CDC-системы ТОЖЕ можно и нужно настраивать аналогичным образом!**
+
+Вот как выглядит типичная конфигурация:
+
+### 📊 Сравнение настроек пакетной обработки в разных коннекторах
+
+| Система | Параметры пакетной обработки | Как работают |
+| :--- | :--- | :--- |
+| **Kafka Connector** | `batch.size`, `linger.ms` | Накопление по количеству или времени |
+| **Flink Connector** | `sink.buffer-flush.*` | `max-rows`, `max-bytes`, `interval` |
+| **Spark Connector** | `write.batch.size` | Размер пачки для каждой задачи |
+| **PeerDB** | `batch_size`, `flush_delay` | Аналогично Kafka - по размеру или задержке |
+
+### 🛠️ Примеры конфигураций
+
+**Для Flink Connector:**
+```sql
+INSERT INTO starrocks_table
+SELECT * FROM source_table
+WITH (
+  'sink.buffer-flush.max-rows' = '10000',
+  'sink.buffer-flush.max-bytes' = '10485760',
+  'sink.buffer-flush.interval' = '10s'
+);
+```
+
+**Для Spark:**
+```scala
+df.write
+  .format("starrocks")
+  .option("write.batch.size", "10000")
+  .save()
+```
+
+**Для PeerDB (предположительно):**
+```yaml
+target:
+  starrocks:
+    batch_size: 10000      # Количество строк в пакете
+    flush_delay: 5000      # Задержка в мс
+    max_retries: 3         # Повторы при ошибках
+```
+
+### 🔄 Как это работает в CDC-системах типа PeerDB
+
+```
+[Source DB] → [CDC Capture] → [PeerDB Buffer] → [StarRocks]
+                      ↓               ↓
+                 Изменения       Накопление пакета
+                 по одной        (100-10k строк)
+                 строке
+```
+
+1. **CDC захватывает изменения** из бинарных логов (построчно)
+2. **PeerDB накапливает** эти изменения в буфере в памяти
+3. **При достижении лимита** (`batch_size` или `flush_delay`) - отправляет пакет в StarRocks
+4. **StarRocks получает** одну пакетную вставку вместо множества одиночных
+
+### 💡 Ключевые параметры, которые нужно искать в ЛЮБОМ коннекторе
+
+Если вы настраиваете интеграцию с StarRocks через ЛЮБУЮ систему, ищите параметры:
+
+- **`batch.size`** / **`batch_size`** - размер пакета в строках
+- **`flush.interval`** / **`flush_delay`** - максимальная задержка
+- **`buffer.size`** / **`buffer_memory`** - размер буфера в памяти
+- **`max.rows`** - максимальное количество строк в пакете
+
+### 🚨 Что проверить для PeerDB конкретно
+
+1. **Документация PeerDB** - раздел "StarRocks connector" или "batch configuration"
+2. **Примеры конфигурации** в их репозитории
+3. **Параметры топика/таска** в UI/API PeerDB
+
+Если таких параметров нет — это **проблема коннектора**, и стоит рассмотреть альтернативы или запросить эту функциональность у вендора.
+
+### ✅ Вывод
+
+**Да, любой адекватный коннектор для StarRocks (включая PeerDB) должен поддерживать пакетную обработку.** Механизм буферизации — это не уникальная особенность Kafka, а обязательная функция для эффективной работы с колоночными СУБД.
+
+Просто при настройке интеграции убедитесь, что находите и настраиваете соответствующие параметры пакетной обработки!
