Update Замечания по архитектуре.md

--- a/001 Overview/Замечания по архитектуре.md
+++ b/001 Overview/Замечания по архитектуре.md
@@ -1,5 +1,6 @@
 # Таблицы
 По умолчанию (без параметров) таблицы [создаются как Duplicate Key table](https://docs.starrocks.io/docs/table_design/StarRocks_table_design/#get-started-with-basic-table-structure)
+
 ```
 CREATE TABLE user_access (
     uid int,
@@ -7,3 +8,12 @@ CREATE TABLE user_access (
 )
 ORDER BY (uid, name);
 ```
+
+Посмотреть структуру можно [так](https://docs.starrocks.io/docs/sql-reference/sql-statements/table_bucket_part_index/SHOW_CREATE_TABLE/)
+
+Unique tables [замещены](https://docs.starrocks.io/docs/table_design/StarRocks_table_design/#:~:text=Unique%20tables%20are%20also%20suitable%20to%20store%20frequently%20updated%20realtime%20data.%20However%20this%20type%20of%20tables%20is%20being%20replaced%20by%20Primary%20Key%20tables%2C%20which%20are%20more%20powerful) Primary Key tables.
+
+**Primary Key** tables must have **unique and NOT NULL** values.
+
+Поддерживаются [временные таблицы](https://docs.starrocks.io/docs/table_design/StarRocks_table_design/#temporary-table) с адекватными ограничениями.
+
