--- a/001 Overview/Замечания по архитектуре.md
+++ b/001 Overview/Замечания по архитектуре.md
@@ -11,9 +11,45 @@ ORDER BY (uid, name);
 
 Посмотреть структуру можно [так](https://docs.starrocks.io/docs/sql-reference/sql-statements/table_bucket_part_index/SHOW_CREATE_TABLE/)
 
-Unique tables [замещены](https://docs.starrocks.io/docs/table_design/StarRocks_table_design/#:~:text=Unique%20tables%20are%20also%20suitable%20to%20store%20frequently%20updated%20realtime%20data.%20However%20this%20type%20of%20tables%20is%20being%20replaced%20by%20Primary%20Key%20tables%2C%20which%20are%20more%20powerful) Primary Key tables.
+Unique tables [замещены](https://docs.starrocks.io/docs/table_design/StarRocks_table_design/#:~:text=Unique%20tables%20are%20also%20suitable%20to%20store%20frequently%20updated%20realtime%20data.%20However%20this%20type%20of%20tables%20is%20being%20replaced%20by%20Primary%20Key%20tables%2C%20which%20are%20more%20powerful) Primary Key tables. У них [оптимизированный движок](https://docs.starrocks.io/docs/table_design/table_types/table_capabilities/#:~:text=Primary%20Key%20table%20has%20an%20enhanced%20underlying%20storage%20engine).
 
 **Primary Key** tables must have **unique and NOT NULL** values.
 
 Поддерживаются [временные таблицы](https://docs.starrocks.io/docs/table_design/StarRocks_table_design/#temporary-table) с адекватными ограничениями.
+
+Типы таблиц [нельзя поменять](https://docs.starrocks.io/docs/table_design/table_types/#precautions) после создания.
+
+Проверить, что происходит [здесь](https://docs.starrocks.io/docs/table_design/table_types/#:~:text=aggregates%20the%20records%20into%20one%20record) - умножение строк? Похоже что [так](https://docs.starrocks.io/docs/table_design/table_types/table_capabilities/#:~:text=the%20new%20and%20old%20data%20rows%20will%20be%20aggregated%20based%20on%20the%20aggregate%20key).
+
+**Primary Key** tables [поддерживают апдейты](https://docs.starrocks.io/docs/table_design/table_types/primary_key_table/#how-it-works) фактически реализуя автоматически обслуживаемую версионку. Тогда как другие типы таблиц занимаются мержамими, выключая при этом досупность новых версий данных для индексов, роняя производительность в ноль.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
