Update Замечания по архитектуре.md

--- a/001 Overview/Замечания по архитектуре.md
+++ b/001 Overview/Замечания по архитектуре.md
@@ -21,7 +21,7 @@ Unique tables [замещены](https://docs.starrocks.io/docs/table_design/Sta
 
 Проверить, что происходит [здесь](https://docs.starrocks.io/docs/table_design/table_types/#:~:text=aggregates%20the%20records%20into%20one%20record) - умножение строк? Похоже что [так](https://docs.starrocks.io/docs/table_design/table_types/table_capabilities/#:~:text=the%20new%20and%20old%20data%20rows%20will%20be%20aggregated%20based%20on%20the%20aggregate%20key).
 
-**Primary Key** tables [поддерживают апдейты](https://docs.starrocks.io/docs/table_design/table_types/primary_key_table/#how-it-works) фактически реализуя автоматически распознаваемую для запросов версионку (запросы авьлматом берут только последние версии строк). Тогда как другие типы таблиц занимаются мержами, выключая при этом досупность новых версий данных для индексов и роняя производительность в ноль.
+**Primary Key** tables [поддерживают апдейты,](https://docs.starrocks.io/docs/table_design/table_types/primary_key_table/#how-it-works) фактически реализуя автоматически распознаваемую для запросов версионку (запросы автоматом берут только последние версии строк). Тогда как другие типы таблиц занимаются мержами, выключая при этом досупность новых версий данных для индексов и роняя производительность в ноль.
 
 
 
