--- a/006 Integration/Apache Flink CDC/005 Лицензирование.md
+++ b/006 Integration/Apache Flink CDC/005 Лицензирование.md
@@ -5,9 +5,9 @@
 
 | Компонент | Лицензия | Источник информации | Краткое описание лицензии |
 | :--- | :--- | :--- | :--- |
-| **Apache Flink** | Apache License 2.0 | [Документация Apache Flink] | Разрешает коммерческое использование, модификацию, распространение и патенты. Требует сохранения уведомлений об авторских правах и лицензии. |
-| **Apache Flink CDC** | Apache License 2.0 | [Документация Flink CDC] | Те же условия, что и у Apache Flink. Отдельно лицензируется как часть экосистемы. |
-| **Debezium** | Apache License 2.0 | [Официальный сайт Debezium] | Позволяет свободное использование и встраивание в другие проекты на тех же условиях. |
+| **Apache Flink** | Apache License 2.0 | [Документация Apache Flink](https://cwiki.apache.org/confluence/display/FLINK/Licensing) | Разрешает коммерческое использование, модификацию, распространение и патенты. Требует сохранения уведомлений об авторских правах и лицензии. |
+| **Apache Flink CDC** | Apache License 2.0 | [Документация Flink CDC](https://nightlies.apache.org/flink/flink-cdc-docs-master/docs/developer-guide/licenses/) | Те же условия, что и у Apache Flink. Отдельно лицензируется как часть экосистемы. |
+| **Debezium** | Apache License 2.0 | [Официальный сайт Debezium](https://debezium.io/license/) | Позволяет свободное использование и встраивание в другие проекты на тех же условиях. |
 | **Debezium в составе Flink** | Apache License 2.0 | (Составная часть коннекторов) | Библиотека Debezium Engine поставляется как зависимость под той же лицензией. |
 
 ### 💡 Практические рекомендации
