--- a/006 Integration/Apache Flink CDC/005 Лицензирование.md
+++ b/006 Integration/Apache Flink CDC/005 Лицензирование.md
@@ -1,5 +1,5 @@
 # Лицензирование
-Да, все упомянутые вами технологии можно **свободно и бесплатно использовать в коммерческих целях**, включая интеграцию в собственное ПО. Это возможно благодаря их лицензиям с открытым исходным кодом.
+Все упомянутые ниже технологии можно **свободно и бесплатно использовать в коммерческих целях**, включая интеграцию в собственное ПО. Это возможно благодаря их лицензиям с открытым исходным кодом.
 
 Вот таблица с деталями по каждой из них:
 
