--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -47,3 +47,74 @@ flowchart LR
 
 Помните, что Flink CDC использует встроенную библиотеку Debezium, поэтому разворачивать отдельный сервис Debezium или Kafka Connect для чтения из PostgreSQL **не нужно**.
 
+# Проблемы с состоянием кластера
+### 📊 Анализ текущего состояния
+На основе команд 
+```bash
+$:/home/sruser# curl http://localhost:8081/taskmanagers
+{"taskmanagers":[]}root@sl11-demostand-sr-01:/home/sruser#
+
+$:/home/sruser/flink-1.20.3/bin# ./flink list
+Waiting for response...
+No running jobs.
+No scheduled jobs.
+
+$:/home/sruser/flink-1.20.3/bin# telnet sl11-demostand-db-01 5432
+Trying xx.xx.xx.xx...
+Connected to sl11-demostand-db-01.
+Escape character is '^]'.
+Connection closed by foreign host.
+```
+
+видно:
+
+| Команда | Результат | Интерпретация |
+| :--- | :--- | :--- |
+| `curl http://localhost:8081/taskmanagers` | `{"taskmanagers":[]}` | **JobManager работает** (есть ответ на порт 8081), но **нет активных TaskManager'ов**. Это значит, что у кластера **нет вычислительных ресурсов** для выполнения задач. |
+| `./flink list` | `No running jobs. No scheduled jobs.` | Это ожидаемо, если нет заданий. Основная проблема — в отсутствии TaskManager. |
+| `telnet sl11-demostand-db-01 5432` | `Connected` | **Отлично!** Сетевое подключение от узла Flink к базе данных PostgreSQL есть. Это обязательное условие для CDC. |
+
+### 🔍 Проверка Java
+Судя по всему, вы находитесь в директории Flink (`/home/sruser/flink-1.20.3/bin`). Проверить версию Java можно оттуда. Вот ключевые команды:
+
+1.  **Проверка версии Java** (главное требование Flink):
+    ```bash
+    java -version
+    ```
+    Для Flink 1.20 требуется **Java 11** или **Java 17**. Вывод должен быть похож на:
+    ```
+    openjdk version "11.0.20" 2023-07-18
+    OpenJDK Runtime Environment (build 11.0.20+...)
+    OpenJDK 64-Bit Server VM (build 11.0.20+..., mixed mode)
+    ```
+
+2.  **Проверка переменной `JAVA_HOME`** (она может потребоваться для скриптов):
+    ```bash
+    echo $JAVA_HOME
+    ```
+    Должен вернуться путь к установке JDK, например: `/usr/lib/jvm/java-11-openjdk-amd64`. Если переменная не установлена, Flink будет искать Java в системном пути.
+
+### 🚨 Главная проблема: Отсутствуют TaskManager
+**Это критично.** JobManager (веб-интерфейс работает) управляет заданиями, но **TaskManager выполняют вычисления**. Без них запустить любое задание, включая CDC, невозможно.
+
+**Причины и решение:**
+1.  **TaskManager не запущен.** В standalone-режиме (самый частый сценарий) TaskManager запускается тем же скриптом `start-cluster.sh`, что и JobManager. Возможно, при запуске возникла ошибка.
+    *   **Проверьте логи запуска**: Найдите и просмотрите логи TaskManager (обычно в папке `flink-1.20.3/log/` файлы с именем `flink-*-taskexecutor-*.log` или `flink-*-taskmanager-*.log`).
+    *   **Перезапустите кластер** (если это тестовая среда):
+        ```bash
+        # Из директории flink-1.20.3/
+        ./bin/stop-cluster.sh
+        ./bin/start-cluster.sh
+        ```
+        После этого снова проверьте `curl http://localhost:8081/taskmanagers` и веб-интерфейс.
+
+2.  **Кластер работает в другом режиме (YARN/K8s).** Если Flink развернут на YARN или Kubernetes, TaskManager динамически выделяются при отправке задания. В этом случае нужно проверить конфигурацию диспетчера ресурсов.
+    *   Как был развернут ваш кластер? Использовали `start-cluster.sh` или другие инструменты (Docker, Helm)?
+
+### ✅ Краткий чек-лист перед установкой Flink CDC
+Перед тем как устанавливать коннекторы, убедитесь в следующем:
+- [ ] **TaskManager запущен и виден в веб-интерфейсе** (вкладка "Task Managers").
+- [ ] **Версия Java корректна** (`java -version` возвращает 11 или 17).
+- [ ] **Путь к PostgreSQL доступен** с узлов TaskManager (проверили, ок).
+- [ ] **В PostgreSQL настроена логическая репликация** (`wal_level = logical`).
+
