Update 008 Практическая установка и настройка.md

--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -137,15 +137,7 @@ Total Task Slots10Task Managers1
 
 # http://sl11-demostand-sr-01:8081/#/task-manager
 Task Managers
-Path, ID	
-Data Port
-Last Heartbeat
-All Slots
-Free Slots
-CPU Cores
-Physical MEM
-JVM Heap Size
-Flink Managed MEM
+Path, ID	                                            Data Port    Last Heartbeat    All Slots    Free Slots    CPU Cores    Physical MEM    JVM Heap Size    Flink Managed MEM
 0.0.0.0:44021-6a8934
 pekko.tcp://flink@0.0.0.0:44021/user/rpc/taskmanager_0	36033	2025-12-10 15:33:44	10	10	4	7.72 GB	7.69 GB	6.25 GB
 ```
