Update 008 Практическая установка и настройка.md

--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -131,9 +131,9 @@ Starting taskexecutor daemon on host sl11-demostand-sr-01.
 ```
 ```bash
 # http://sl11-demostand-sr-01:8081/#/overview
-Available Task Slots
-10
-Total Task Slots10Task Managers1
+Available Task Slots    10
+Total Task Slots        10
+Task Managers           1
 
 # http://sl11-demostand-sr-01:8081/#/task-manager
 Task Managers
