Update 008 Практическая установка и настройка.md

--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -119,6 +119,7 @@ Connection closed by foreign host.
 - [ ] **В PostgreSQL настроена логическая репликация** (`wal_level = logical`).
 
 # Решение
+Стартуем кластер
 ```bash
 # ./start-cluster.sh
 Starting cluster.
@@ -129,6 +130,7 @@ Starting taskexecutor daemon on host sl11-demostand-sr-01.
 {"taskmanagers":[{"id":"0.0.0.0:44021-6a8934","path":"pekko.tcp://flink@0.0.0.0:44021/user/rpc/taskmanager_0","dataPort":36033,"jmxPort":-1,"timeSinceLastHeartbeat":1765369634808,"slotsNumber":10,"freeSlots":10,"totalResource":{"cpuCores":10.0,"taskHeapMemory":7743,"taskOffHeapMemory":0,"managedMemory":6400,"networkMemory":1600,"extendedResources":{}},"freeResource":{"cpuCores":10.0,"taskHeapMemory":7743,"taskOffHeapMemory":0,"managedMemory":6400,"networkMemory":1600,"extendedResources":{}},"hardware":{"cpuCores":4,"physicalMemory":8290181120,"freeMemory":8254390272,"managedMemory":6710886500},"memoryConfiguration":{"frameworkHeap":134217728,"taskHeap":8120172419,"frameworkOffHeap":134217728,"taskOffHeap":0,"networkMemory":1677721625,"managedMemory":6710886500,"jvmMetaspace":268435456,"jvmOverhead":1073741824,"totalFlinkMemory":16777216000,"totalProcessMemory":18119393280}}]}
 
 ```
+Проверяем
 ```bash
 # http://sl11-demostand-sr-01:8081/#/overview
 Available Task Slots    10
