Update 008 Практическая установка и настройка.md

--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -143,3 +143,55 @@ Path, ID	                                            Data Port    Last Heartbeat
 0.0.0.0:44021-6a8934
 pekko.tcp://flink@0.0.0.0:44021/user/rpc/taskmanager_0	36033	    2025-12-10 15:33:44	    10	        10	            4	        7.72 GB	        7.69 GB	        6.25 GB
 ```
+Проверяем джаву
+```bash
+$:/home/sruser/flink-1.20.3/bin# java -version
+openjdk version "17.0.17" 2025-10-21
+OpenJDK Runtime Environment (build 17.0.17+10-Debian-1deb12u1)
+OpenJDK 64-Bit Server VM (build 17.0.17+10-Debian-1deb12u1, mixed mode, sharing)
+
+$:/home/sruser/flink-1.20.3/bin# echo $JAVA_HOME
+
+# whereis java
+java: /usr/bin/java /usr/share/java /usr/share/man/man1/java.1.gz
+```
+Правим джаву
+```bash
+# check & backup
+$: sudo nano ~/.bashrc
+
+# check formula
+$: export JAVA_HOME=$(dirname $(dirname $(readlink -f /usr/bin/java)))
+$: echo $JAVA_HOME
+/usr/lib/jvm/java-17-openjdk-amd64
+
+# apply to bashrc
+$: echo "export JAVA_HOME=$(dirname $(dirname $(readlink -f /usr/bin/java)))" >> ~/.bashrc
+$: source ~/.bashrc
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
