Update 008 Практическая установка и настройка.md

--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -51,15 +51,15 @@ flowchart LR
 ### 📊 Анализ текущего состояния
 На основе команд 
 ```bash
-$:/home/sruser# curl http://localhost:8081/taskmanagers
+$: /home/sruser# curl http://localhost:8081/taskmanagers
 {"taskmanagers":[]}root@sl11-demostand-sr-01:/home/sruser#
 
-$:/home/sruser/flink-1.20.3/bin# ./flink list
+$: /home/sruser/flink-1.20.3/bin# ./flink list
 Waiting for response...
 No running jobs.
 No scheduled jobs.
 
-$:/home/sruser/flink-1.20.3/bin# telnet sl11-demostand-db-01 5432
+$: /home/sruser/flink-1.20.3/bin# telnet sl11-demostand-db-01 5432
 Trying xx.xx.xx.xx...
 Connected to sl11-demostand-db-01.
 Escape character is '^]'.
@@ -79,7 +79,7 @@ Connection closed by foreign host.
 
 1.  **Проверка версии Java** (главное требование Flink):
     ```bash
-    java -version
+    $: java -version
     ```
     Для Flink 1.20 требуется **Java 11** или **Java 17**. Вывод должен быть похож на:
     ```
@@ -90,7 +90,7 @@ Connection closed by foreign host.
 
 2.  **Проверка переменной `JAVA_HOME`** (она может потребоваться для скриптов):
     ```bash
-    echo $JAVA_HOME
+    $: echo $JAVA_HOME
     ```
     Должен вернуться путь к установке JDK, например: `/usr/lib/jvm/java-11-openjdk-amd64`. Если переменная не установлена, Flink будет искать Java в системном пути.
 
@@ -103,8 +103,8 @@ Connection closed by foreign host.
     *   **Перезапустите кластер** (если это тестовая среда):
         ```bash
         # Из директории flink-1.20.3/
-        ./bin/stop-cluster.sh
-        ./bin/start-cluster.sh
+        $: ./bin/stop-cluster.sh
+        $: ./bin/start-cluster.sh
         ```
         После этого снова проверьте `curl http://localhost:8081/taskmanagers` и веб-интерфейс.
 
@@ -121,12 +121,12 @@ Connection closed by foreign host.
 # Решение
 Стартуем кластер
 ```bash
-# ./start-cluster.sh
+$: ./start-cluster.sh
 Starting cluster.
 Starting standalonesession daemon on host sl11-demostand-sr-01.
 Starting taskexecutor daemon on host sl11-demostand-sr-01.
 
-# curl http://localhost:8081/taskmanagers
+$: curl http://localhost:8081/taskmanagers
 {"taskmanagers":[{"id":"0.0.0.0:44021-6a8934","path":"pekko.tcp://flink@0.0.0.0:44021/user/rpc/taskmanager_0","dataPort":36033,"jmxPort":-1,"timeSinceLastHeartbeat":1765369634808,"slotsNumber":10,"freeSlots":10,"totalResource":{"cpuCores":10.0,"taskHeapMemory":7743,"taskOffHeapMemory":0,"managedMemory":6400,"networkMemory":1600,"extendedResources":{}},"freeResource":{"cpuCores":10.0,"taskHeapMemory":7743,"taskOffHeapMemory":0,"managedMemory":6400,"networkMemory":1600,"extendedResources":{}},"hardware":{"cpuCores":4,"physicalMemory":8290181120,"freeMemory":8254390272,"managedMemory":6710886500},"memoryConfiguration":{"frameworkHeap":134217728,"taskHeap":8120172419,"frameworkOffHeap":134217728,"taskOffHeap":0,"networkMemory":1677721625,"managedMemory":6710886500,"jvmMetaspace":268435456,"jvmOverhead":1073741824,"totalFlinkMemory":16777216000,"totalProcessMemory":18119393280}}]}
 
 ```
