--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -145,14 +145,14 @@ pekko.tcp://flink@0.0.0.0:44021/user/rpc/taskmanager_0	36033	    2025-12-10 15:3
 ```
 Проверяем джаву
 ```bash
-$:/home/sruser/flink-1.20.3/bin# java -version
+$: /home/sruser/flink-1.20.3/bin# java -version
 openjdk version "17.0.17" 2025-10-21
 OpenJDK Runtime Environment (build 17.0.17+10-Debian-1deb12u1)
 OpenJDK 64-Bit Server VM (build 17.0.17+10-Debian-1deb12u1, mixed mode, sharing)
 
-$:/home/sruser/flink-1.20.3/bin# echo $JAVA_HOME
+$: /home/sruser/flink-1.20.3/bin# echo $JAVA_HOME
 
-# whereis java
+$: whereis java
 java: /usr/bin/java /usr/share/java /usr/share/man/man1/java.1.gz
 ```
 Правим джаву
