--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -171,6 +171,58 @@ $: source ~/.bashrc
 
 ```
 
+👏 Кластер Apache Flink теперь находится в **идеально рабочем состоянии**.   
+Давайте разберём, что означают результаты ваших проверок, и составим план установки Flink CDC.
+
+### 📊 Анализ результатов проверки
+
+| Проверяемый компонент | Ваш результат | Статус и значение |
+| :--- | :--- | :--- |
+| **TaskManager** | `{"taskmanagers":[{"id":"0.0.0.0:44021...", ...}]}` | ✅ **ГОТОВ**. Один TaskManager запущен и подключён к JobManager. |
+| **Вычислительные слоты** | `"slotsNumber":10, "freeSlots":10` | ✅ **ГОТОВ**. Все 10 слотов свободны и готовы выполнять задания Flink CDC. |
+| **Версия Java** | `openjdk version "17.0.17"` | ✅ **ГОТОВ**. Версия Java 17 полностью совместима с Flink 1.20 и всеми современными коннекторами CDC. |
+| **Подключение к PostgreSQL** | `telnet ... Connected` (из прошлого ответа) | ✅ **ГОТОВ**. Сетевая связь с источником данных есть. |
+| **Переменная `JAVA_HOME`** | (пустой вывод) | ⚠️ **НЕ КРИТИЧНО**. Flink нашёл Java в системном пути, что достаточно для работы. Для полной корректности скриптов можно установить: `export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64` (путь уточните командой `whereis java`). |
+
+### 🚀 Переходим к установке Flink CDC
+Так как кластер готов, следующим шагом будет **установка JAR-файлов коннекторов**. Это самый важный подготовительный этап. Вам понадобятся два ключевых коннектора:
+
+1.  **Источник (Source)**: `flink-sql-connector-postgres-cdc-3.5.0.jar` — для чтения изменений из PostgreSQL.
+2.  **Приёмник (Sink)**: `flink-connector-starrocks-1.2.9_flink-1.16.jar` (или версия для Flink 1.20) — для записи данных в StarRocks.
+
+> **Важно!** Flink 1.20 — довольно новая версия. Убедитесь, что вы берёте коннекторы, совместимые именно с ней. Коннектор StarRocks для Flink 1.16 может **не работать** с Flink 1.20. Ищите в документации StarRocks версию для Flink 1.20 или используйте универсальный коннектор, если такой есть.
+
+### 📥 Практические шаги по установке
+Вот пошаговый план действий. Предполагается, что вы работаете в standalone-режиме, и все компоненты на одном сервере.
+
+1.  **Скачайте JAR-файлы** в удобную директорию (например, `/home/sruser/downloads/`):
+    *   **Flink CDC PostgreSQL Connector**: Скачайте с [официальной страницы релизов Apache Flink CDC](https://github.com/apache/flink-cdc/releases/tag/release-3.5.0). В списке ассетов найдите `flink-sql-connector-postgres-cdc-3.5.0.jar`.
+    *   **Flink Connector StarRocks**: Скачайте с [официального сайта StarRocks](https://docs.starrocks.io/docs/data-integration/flink-connector/starrocks-flink-connector/). Убедитесь, что выбрали версию, совместимую с **Flink 1.20** (например, `flink-connector-starrocks-1.2.9_flink-1.20.jar`). Если такой нет, возможно, стоит рассмотреть использование более новой версии Flink или коннектора.
+
+2.  **Разместите JAR-файлы в кластере Flink**:
+    Скопируйте оба скачанных `.jar` файла в директорию `lib/` вашей установки Flink:
+    ```bash
+    cp /home/sruser/downloads/flink-sql-connector-postgres-cdc-3.5.0.jar /home/sruser/flink-1.20.3/lib/
+    cp /home/sruser/downloads/flink-connector-starrocks-*.jar /home/sruser/flink-1.20.3/lib/
+    ```
+
+3.  **Перезапустите TaskManager** (чтобы он подхватил новые библиотеки):
+    Из директории Flink выполните:
+    ```bash
+    ./bin/taskmanager.sh stop
+    ./bin/taskmanager.sh start
+    ```
+    После перезапуска снова убедитесь, что TaskManager виден: `curl http://localhost:8081/taskmanagers`.
+
+4.  **(Опционально) Установите переменную `JAVA_HOME`**:
+    Добавьте строку в файл `~/.bashrc` или `~/.profile`, чтобы переменная устанавливалась при каждом входе:
+    ```bash
+    export JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))
+    ```
+    Затем примените изменения: `source ~/.bashrc`.
+
+После успешного выполнения этих шагов ваш кластер будет полностью готов к запуску пайплайнов Flink CDC — как через YAML, так и через SQL Client.
+
 
 
 
