Update 008 Практическая установка и настройка.md

--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -197,7 +197,7 @@ $: source ~/.bashrc
 
 1.  **Скачайте JAR-файлы** в удобную директорию (например, `/home/sruser/downloads/`):
     *   **Flink CDC PostgreSQL Connector**: Скачайте с [официальной страницы релизов Apache Flink CDC](https://github.com/apache/flink-cdc/releases/tag/release-3.5.0). В списке ассетов найдите `flink-sql-connector-postgres-cdc-3.5.0.jar`.
-    *   **Flink Connector StarRocks**: Скачайте с [официального сайта StarRocks](https://docs.starrocks.io/docs/data-integration/flink-connector/starrocks-flink-connector/). Убедитесь, что выбрали версию, совместимую с **Flink 1.20** (например, `flink-connector-starrocks-1.2.9_flink-1.20.jar`). Если такой нет, возможно, стоит рассмотреть использование более новой версии Flink или коннектора.
+    *   **Flink Connector StarRocks**: Скачайте с [официального сайта StarRocks](https://repo1.maven.org/maven2/com/starrocks/flink-connector-starrocks/). Убедитесь, что выбрали версию, совместимую с **Flink 1.20** (например, `flink-connector-starrocks-1.2.9_flink-1.20.jar`). Если такой нет, возможно, стоит рассмотреть использование более новой версии Flink или коннектора.
 
 2.  **Разместите JAR-файлы в кластере Flink**:
     Скопируйте оба скачанных `.jar` файла в директорию `lib/` вашей установки Flink:
