--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -184,24 +184,31 @@ $: source ~/.bashrc
 | **Подключение к PostgreSQL** | `telnet ... Connected` (из прошлого ответа) | ✅ **ГОТОВ**. Сетевая связь с источником данных есть. |
 | **Переменная `JAVA_HOME`** | (пустой вывод) | ⚠️ **НЕ КРИТИЧНО**. Flink нашёл Java в системном пути, что достаточно для работы. Для полной корректности скриптов можно установить: `export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64` (путь уточните командой `whereis java`). |
 
-### 🚀 Переходим к установке Flink CDC
-Так как кластер готов, следующим шагом будет **установка JAR-файлов коннекторов**. Это самый важный подготовительный этап. Вам понадобятся два ключевых коннектора:
+# Установка Flink CDC
+### Понадобятся два ключевых коннектора
 
 1.  **Источник (Source)**: `flink-sql-connector-postgres-cdc-3.5.0.jar` — для чтения изменений из PostgreSQL.
-2.  **Приёмник (Sink)**: `flink-connector-starrocks-1.2.9_flink-1.16.jar` (или версия для Flink 1.20) — для записи данных в StarRocks.
-
-> **Важно!** Flink 1.20 — довольно новая версия. Убедитесь, что вы берёте коннекторы, совместимые именно с ней. Коннектор StarRocks для Flink 1.16 может **не работать** с Flink 1.20. Ищите в документации StarRocks версию для Flink 1.20 или используйте универсальный коннектор, если такой есть.
+2.  **Приёмник (Sink)**: `flink-cdc-pipeline-connector-starrocks-3.5.0.jar` — для записи данных в StarRocks.
 
 ### 📥 Практические шаги по установке
 Вот пошаговый план действий. Предполагается, что вы работаете в standalone-режиме, и все компоненты на одном сервере.
 
-1.  **Скачайте JAR-файлы** в удобную директорию (например, `/home/sruser/downloads/`):
-    *   **Flink CDC PostgreSQL Connector**: Скачайте с [официальной страницы релизов Apache Flink CDC](https://github.com/apache/flink-cdc/releases/tag/release-3.5.0). В списке ассетов найдите `flink-sql-connector-postgres-cdc-3.5.0.jar`.
-    *   **Flink Connector StarRocks**: Скачайте с [официального сайта StarRocks](https://repo1.maven.org/maven2/com/starrocks/flink-connector-starrocks/). Убедитесь, что выбрали версию, совместимую с **Flink 1.20** (например, `flink-connector-starrocks-1.2.9_flink-1.20.jar`). Если такой нет, возможно, стоит рассмотреть использование более новой версии Flink или коннектора.
+1.  **Скачайте JAR-файлы** в удобную директорию (например, `/home/sruser/downloads/`) с [официальной страницы релизов Apache Flink CDC](https://github.com/apache/flink-cdc/releases/tag/release-3.5.0)
+    *   **PostgreSQL Source connector 3.5.0**
+    *   **StarRocks Pipeline Connector 3.5.0**
+  
 
-[Releases of StarRocks Connector for Flink](https://docs.starrocks.io/releasenotes/flink_connector/) --> разъяснения по версиям  
-[Maven Central Repository](https://repo1.maven.org/maven2/com/starrocks/)
 
+
+
+
+
+--------------------------------------------------------------------------------------------------------------------------
+
+
+
+
+      
 2.  **Разместите JAR-файлы в кластере Flink**:
     Скопируйте оба скачанных `.jar` файла в директорию `lib/` вашей установки Flink:
     ```bash
