Update 008 Практическая установка и настройка.md

--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -185,10 +185,87 @@ $: source ~/.bashrc
 | **Переменная `JAVA_HOME`** | (пустой вывод) | ⚠️ **НЕ КРИТИЧНО**. Flink нашёл Java в системном пути, что достаточно для работы. Для полной корректности скриптов можно установить: `export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64` (путь уточните командой `whereis java`). |
 
 # Установка Flink CDC
+
+Из-за различий в нумерации проектов легко запутаться. Давайте разберем, как правильно получить нужные компоненты для **YAML-пайплайнов Flink CDC** с использованием Flink 1.20.
+
+### 🔍 Сравнение двух типов коннекторов для StarRocks
+Для YAML-пайплайнов Flink CDC вы должны использовать **нестандартный**, специальный коннектор. Вам нужно понять разницу:
+
+| Аспект | **Стандартный Flink Connector для StarRocks** | **Flink CDC Pipeline Connector для StarRocks** |
+| :--- | :--- | :--- |
+| **Назначение** | Для классических заданий Flink (SQL/DataStream API) | **Исключительно для декларативных YAML-пайплайнов Flink CDC** |
+| **Название файла** | `flink-connector-starrocks-x.x.x_flink-x.x.jar` (с сайта StarRocks) | `flink-cdc-pipeline-connector-starrocks-x.x.x.jar` (от проекта Apache Flink CDC) |
+| **Где взять** | Maven Central (с префиксом `com.starrocks`), но версия для Flink 1.20 в виде готового JAR может отсутствовать. | **Maven Central, но в другом месте** (с префиксом `org.apache.flink`). Этот коннектор уже входит в полный дистрибутив Flink CDC. |
+| **Статус для Flink 1.20** | Версия **1.2.11+** *код* поддерживает Flink 1.20, но готового JAR с пометкой `_flink-1.20` может не быть. | Полностью поддерживается в последних версиях Flink CDC (3.5.0). |
+
+### 📥 Пошаговый план: как получить всё необходимое
+Чтобы избежать путаницы с версиями коннектора, самый простой путь — использовать полный дистрибутив **Apache Flink CDC 3.5.0**, который включает в себя все необходимые компоненты.
+
+1.  **Скачайте полный дистрибутив Flink CDC 3.5.0**:
+    Перейдите на [официальную страницу релизов Apache Flink CDC](https://github.com/apache/flink-cdc/releases/tag/release-3.5.0) и скачайте архив `flink-cdc-3.5.0-bin.tar.gz`.
+
+2.  **Используйте встроенный коннектор StarRocks для пайплайнов**:
+    После распаковки архива вы найдете нужный JAR-файл в папке `lib/`:
+    ```bash
+    flink-cdc-3.5.0/lib/flink-cdc-pipeline-connector-starrocks-3.5.0.jar
+    ```
+    Этот коннектор уже предназначен для работы с YAML и совместим с вашим Flink 1.20 через промежуточный слой Flink CDC.
+
+3.  **Скопируйте коннектор PostgreSQL CDC**:
+    Также в папке `lib/` дистрибутива Flink CDC лежит `flink-sql-connector-postgres-cdc-3.5.0.jar`. **Скопируйте оба файла** (`starrocks` и `postgres-cdc`) в директорию `lib/` вашего рабочего кластера Flink 1.20 (у вас это `/home/sruser/flink-1.20.3/lib/`).
+
+4.  **Перезапустите TaskManager** (как делали ранее), чтобы он подхватил новые библиотеки.
+
+### ⚠️ Важные замечания
+*   **Не смешивайте коннекторы**. Не пытайтесь использовать стандартный `flink-connector-starrocks` (от StarRocks Inc.) в YAML-пайплайнах Flink CDC. Они предназначены для разных уровней абстракции и несовместимы.
+*   **Проверьте документацию**. Для тонкой настройки пайплайна (например, параметров `sink.buffer-flush.interval-ms`) обратитесь к [документации StarRocks](https://docs.starrocks.io/docs/loading/Flink-connector-starrocks/), чтобы понять доступные опции. Формат их указания в YAML будет соответствовать синтаксису Flink CDC.
+*   **Готовый пример**. В поиске есть рабочий пример YAML-файла для MySQL → StarRocks, который можно адаптировать под PostgreSQL. Структура секций `source`, `sink` и `pipeline` будет аналогичной.
+
+Этот подход с использованием полного дистрибутива Flink CDC избавляет вас от ручного поиска и проверки совместимости отдельных JAR-файлов.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+------------------------------------------------------------------------------------------------------------------------
+
+
+
+
 ### Понадобятся два ключевых коннектора
 
 1.  **Источник (Source)**: `flink-sql-connector-postgres-cdc-3.5.0.jar` — для чтения изменений из PostgreSQL.
 2.  **Приёмник (Sink)**: `flink-cdc-pipeline-connector-starrocks-3.5.0.jar` — для записи данных в StarRocks.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+--------------------------------------------------------------------------------------------------------------------------------------
 
 ### 📥 Практические шаги по установке
 Вот пошаговый план действий. Предполагается, что вы работаете в standalone-режиме, и все компоненты на одном сервере.
