Update 008 Практическая установка и настройка.md

--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -238,7 +238,9 @@ $: source ~/.bashrc
 
 
 
----------------------бред---------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------
+далее бред
+------------------------------------------------------------------------------------------------------------------------
 
 
 
