--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -215,6 +215,12 @@ $: source ~/.bashrc
     Также в папке `lib/` дистрибутива Flink CDC лежит `flink-sql-connector-postgres-cdc-3.5.0.jar`. **Скопируйте оба файла** (`starrocks` и `postgres-cdc`) в директорию `lib/` вашего рабочего кластера Flink 1.20 (у вас это `/home/sruser/flink-1.20.3/lib/`).
 
 4.  **Перезапустите TaskManager** (как делали ранее), чтобы он подхватил новые библиотеки.
+```bash
+$: ./stop-cluster.sh
+$: ./start-cluster.sh
+
+$: curl http://localhost:8081/taskmanagers
+```
 
 ### ⚠️ Важные замечания
 *   **Не смешивайте коннекторы**. Не пытайтесь использовать стандартный `flink-connector-starrocks` (от StarRocks Inc.) в YAML-пайплайнах Flink CDC. Они предназначены для разных уровней абстракции и несовместимы.
