--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -214,7 +214,13 @@ $: source ~/.bashrc
 3.  **Скопируйте коннектор PostgreSQL CDC**:
     Также в папке `lib/` дистрибутива Flink CDC лежит `flink-sql-connector-postgres-cdc-3.5.0.jar`. **Скопируйте оба файла** (`starrocks` и `postgres-cdc`) в директорию `lib/` вашего рабочего кластера Flink 1.20 (у вас это `/home/sruser/flink-1.20.3/lib/`).
 
-4.  **Перезапустите TaskManager** (как делали ранее), чтобы он подхватил новые библиотеки.
+4. Выставляем [рекомендуемую настройку](https://github.com/StarRocks/starrocks/issues/51599#issue-2565202086)
+```bash
+execution:
+  checkpointing:
+    interval: 15s
+```
+5.  **Перезапустите TaskManager** (как делали ранее), чтобы он подхватил новые библиотеки.
 ```bash
 $: ./stop-cluster.sh
 $: ./start-cluster.sh
@@ -229,6 +235,106 @@ $: curl http://localhost:8081/taskmanagers
 
 Этот подход с использованием полного дистрибутива Flink CDC избавляет вас от ручного поиска и проверки совместимости отдельных JAR-файлов.
 
+------------------------------------------------------------------------
+..\Work\Tasks\CS-28826 РТК. Настроить BI на demo стенде\cdc\Apache Flink\Test\Streaming ELT from PostgreSQL to StarRocks.sql   
+------------------------------------------------------------------------
+
+[Адаптируем шаблон](https://nightlies.apache.org/flink/flink-cdc-docs-stable/docs/get-started/quickstart/mysql-to-starrocks/#submit-job-with-flink-cdc-cli) под нашу среду. Основные моменты, которые нужно исправить для PostgreSQL: формат имён таблиц, настройки репликации и параметры для вашего конкретного хоста.
+
+### 🔧 Исправленная и дополненная конфигурация
+Вот полный YAML-файл с комментариями о важных изменениях.
+
+```yaml
+# postgres-to-starrocks-pipeline.yaml
+
+source:
+  type: postgres
+  # === ПОДКЛЮЧЕНИЕ К POSTGRESQL ===
+  hostname: sl11-demostand-db-01 # Ваш хост из команды telnet
+  port: 5432
+  username: flink_user # Замените на реального пользователя с правами REPLICATION
+  password: your_secure_password
+  database-name: your_database # Укажите имя вашей базы данных
+  schema-name: public # Укажите схему (чаще всего 'public')
+  
+  # === ВЫБОР ТАБЛИЦ И НАСТРОЙКА РЕПЛИКАЦИИ ===
+  # Важно: формат для PostgreSQL - "схема.таблица", через точки.
+  # Выбираем все таблицы в схеме 'public':
+  table-list: ["public.*"]
+  # Исключаем ненужные таблицы по шаблону (опционально):
+  # debezium.table.exclude.list: "public.audit_log, public.temp_.*"
+  
+  # === КЛЮЧЕВЫЕ ПАРАМЕТРЫ ДЛЯ УПРАВЛЕНИЯ РЕПЛИКАЦИЕЙ ===
+  # Имя слота репликации. Задайте своё или оставьте сгенерированное.
+  slot.name: flink_cdc_slot
+  # Режим снапшота: 'initial' (сначала полный дамп, потом CDC)
+  debezium.snapshot.mode: initial
+  # Heartbeat для контроля за слотами (критически важно!)
+  debezium.heartbeat.interval.ms: 10000
+  
+  # Параметр 'server-id' и 'server-time-zone' из примера для MySQL - для PostgreSQL не нужны.
+  # Уберите эти строки.
+
+sink:
+  type: starrocks
+  name: StarRocks demostand Sink
+  # === ПОДКЛЮЧЕНИЕ К STARROCKS ===
+  # Убедитесь, что порты и адреса верные.
+  jdbc-url: jdbc:mysql://127.0.0.1:9030 # Порт для MySQL-совместимых клиентов
+  load-url: 127.0.0.1:8080 # Порт для Stream Load (обычно 8030, проверьте!)
+  username: root
+  password: "" # Если пароль пустой, можно оставить так
+  
+  # === НАСТРОЙКИ ЗАГРУЗКИ ===
+  # Основные параметры производительности
+  sink.buffer-flush.interval-ms: 10000 # Интервал флуша (мс)
+  sink.buffer-flush.max-rows: 50000    # Макс. строк для флуша
+  # Свойства для создания таблиц (если они будут создаваться автоматически)
+  table.create.properties.replication_num: 1
+  # Формат данных при передаче (оптимально для Flink CDC)
+  sink.properties.format: json
+  sink.properties.strip_outer_array: true
+
+pipeline:
+  name: Sync sl11-demostand-sr-01 PostgreSQL to StarRocks
+  parallelism: 4
+  # === РЕЖИМ ИСПОЛНЕНИЯ И СИНХРОНИЗАЦИЯ СХЕМЫ ===
+  execution-mode: streaming # Используем потоковый режим для CDC
+  # Включите синхронизацию схемы, если нужно автоматически создавать таблицы
+  # schema-change:
+  #   sync-database: false # StarRocks коннектор обычно создает таблицы в указанной БД
+  #   sync-table: true
+  #   sync-ddl: APPLY # APPLY - применять, IGNORE - игнорировать DDL из PostgreSQL
+```
+
+### 📝 Ключевые изменения и пояснения
+
+1.  **Источник (Source) для PostgreSQL**:
+    *   **`hostname`**: Указан ваш хост `sl11-demostand-db-01`.
+    *   **`database-name` и `schema-name`**: **Обязательные** параметры для PostgreSQL, которых не было в MySQL-примере.
+    *   **`table-list`**: Формат изменился с `dbo\.\.*` на `["public.*"]`. Для выбора конкретных таблиц можно использовать: `["public.table1", "public.table2"]`.
+    *   **Управление репликацией**: Добавлены ключевые параметры `slot.name` и `debezium.heartbeat.interval.ms` для контроля слота.
+    *   **Удалено**: Параметры `server-id` и `server-time-zone` специфичны для MySQL и не требуются для PostgreSQL.
+
+2.  **Приёмник (Sink) для StarRocks**:
+    *   **`load-url`**: Убедитесь, что порт правильный. По умолчанию для Stream Load используется **`8030`**, а не `8080`.
+    *   **Параметры производительности**: Добавлены `sink.buffer-flush.interval-ms` и `sink.buffer-flush.max-rows` для управления пакетной записью.
+    *   **Формат данных**: Добавлены `sink.properties.format` и `strip_outer_array` для корректной работы с JSON из CDC.
+
+3.  **Пайплайн (Pipeline)**:
+    *   **`execution-mode`**: Установлен `streaming` для непрерывной репликации.
+    *   **Синхронизация схемы**: Закомментирована секция `schema-change`. Для начала можно попробовать без неё, создав таблицы в StarRocks вручную. Включите, если нужно автоматическое создание/изменение таблиц.
+
+### 🚀 Следующие шаги
+1.  **Сохраните** этот текст в файл, например, `postgres-to-starrocks.yaml`.
+2.  **Заполните пропуски** (`your_database`, `flink_user`, `your_secure_password`). Убедитесь, что пользователь PostgreSQL имеет права `REPLICATION`, `LOGIN` и `SELECT` на нужные таблицы.
+3.  **Проверьте порт** `load-url` для StarRocks (скорее всего, `8030`).
+4.  **Запустите пайплайн** с помощью утилиты `flink-cdc.sh` из дистрибутива Flink CDC 3.5.0:
+    ```bash
+    /путь/к/flink-cdc-3.5.0/bin/flink-cdc.sh pipeline /путь/к/postgres-to-starrocks.yaml
+    ```
+
+После запуска отслеживайте задание в веб-интерфейсе Flink (`http://sl11-demostand-sr-01:8081`). Если возникнут ошибки (например, о невозможности подключения или создания слота), логи помогут определить причину.
 
 
 
