Update 008 Практическая установка и настройка.md

--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -240,7 +240,7 @@ $: curl http://localhost:8081/taskmanagers
 
 ------------------------------------------------------------------------
 
-[Адаптируем шаблон](https://nightlies.apache.org/flink/flink-cdc-docs-stable/docs/get-started/quickstart/mysql-to-starrocks/#submit-job-with-flink-cdc-cli) под нашу среду. Основные моменты, которые нужно исправить для PostgreSQL: формат имён таблиц, настройки репликации и параметры для вашего конкретного хоста.
+[Адаптируем шаблон](https://nightlies.apache.org/flink/flink-cdc-docs-stable/docs/get-started/quickstart/mysql-to-starrocks/#submit-job-with-flink-cdc-cli) под нашу среду. Основные моменты, которые нужно исправить для PostgreSQL: формат имён таблиц, настройки репликации и параметры для конкретного хоста.
 
 ### 🔧 Исправленная и дополненная конфигурация
 Вот полный YAML-файл с комментариями о важных изменениях.
