--- a/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
+++ b/006 Integration/Apache Flink CDC/008 Практическая установка и настройка.md
@@ -337,8 +337,91 @@ pipeline:
 
 После запуска отслеживайте задание в веб-интерфейсе Flink (`http://sl11-demostand-sr-01:8081`). Если возникнут ошибки (например, о невозможности подключения или создания слота), логи помогут определить причину.
 
+# Проверка и подготовка Postgres
+Правильный подход — перед запуском пайплайна убедиться, что в PostgreSQL всё готово. Вот пошаговая инструкция, что именно нужно проверить, создать и как задокументировать.
 
+### 🔍 Шаг 1: Проверка текущего состояния
+Сначала посмотрим, что уже есть. Выполните эти SQL-запросы в вашей базе `cdctest`, подключившись под пользователем `supersetuser` или `postgres`.
 
+| Что проверяем | SQL-запрос | Интерпретация результата (для чистого стенда) |
+| :--- | :--- | :--- |
+| **Роль (пользователь)** | `\du+ supersetuser` (в psql) или `SELECT rolname, rolreplication, rolcreaterole FROM pg_roles WHERE rolname = 'supersetuser';` | `rolreplication` должен быть `t` (true), иначе пользователь не может работать со слотами репликации. |
+| **Слоты репликации** | `SELECT * FROM pg_replication_slots WHERE slot_name LIKE '%flink%';` | Если запрос ничего не вернул — слотов нет. Это нормально для начала. |
+| **Публикации** | `SELECT * FROM pg_publication WHERE pubname LIKE '%flink%';` | Если пусто — публикаций нет. |
+| **Права на схему и таблицу** | `\z dbo.constants` (в psql) или запрос к `information_schema.role_table_grants`. | У `supersetuser` должны быть права `SELECT` на таблицу `dbo.constants` и (желательно) на схему `dbo`. |
+| **Конфигурация WAL** | `SHOW wal_level;` | Должно вернуть **`logical`**. Это главное условие для работы логической репликации. |
+
+### ⚙️ Шаг 2: Настройка пользователя и прав
+Если проверка показала недостаток прав, выполните эти команды от имени пользователя с правами суперпользователя (например, `postgres`).
+
+```sql
+-- 1. Даем пользователю право на логическую репликацию (обязательно)
+ALTER ROLE supersetuser WITH REPLICATION;
+
+-- 2. Даем право на подключение к базе данных (если вдруг нет)
+GRANT CONNECT ON DATABASE cdctest TO supersetuser;
+
+-- 3. Даем права на чтение таблицы и схемы
+GRANT USAGE ON SCHEMA dbo TO supersetuser;
+GRANT SELECT ON dbo.constants TO supersetuser;
+
+-- 4. (Осторожно!) Если вы планируете, чтобы Flink автоматически создавал публикации,
+-- может потребоваться дополнительное право. Но лучше создать публикацию вручную.
+-- GRANT CREATE ON DATABASE cdctest TO supersetuser;
+```
+
+### 🗄️ Шаг 3: Создание публикации и управление слотами
+Здесь есть два подхода: **ручной** (рекомендуется для контроля) и **автоматический** (когда коннектор создаёт всё сам). Для вашего документального процесса советую ручной.
+
+```sql
+-- 1. Создаем публикацию для конкретной таблицы (можно добавить несколько)
+CREATE PUBLICATION flink_pub FOR TABLE dbo.constants WITH (publish = 'insert, update, delete, truncate');
+
+-- 2. Проверяем, что публикация создана и на какие таблицы она настроена
+SELECT * FROM pg_publication_tables WHERE pubname = 'flink_pub';
+
+-- 3. Слот репликации Flink CDC создаст САМ при первом запуске.
+-- Мы лишь можем указать для него имя в конфиге YAML (slot.name: 'flink_cdc_slot').
+
+-- 4. Для просмотра и ручного управления слотами (если что-то пойдет не так):
+-- Просмотр всех слотов и их отставания (LSN lag)
+SELECT slot_name, plugin, slot_type, active,
+       pg_size_pretty(pg_wal_lsn_diff(pg_current_wal_lsn(), confirmed_flush_lsn)) as replication_lag
+FROM pg_replication_slots;
+
+-- ОПАСНО: Принудительное удаление зависшего слота (если задание Flink упало и не освободило его).
+-- SELECT pg_drop_replication_slot('flink_cdc_slot');
+```
+
+### 📝 Шаг 4: Финальная проверка и запуск
+Перед запуском Flink CDC сверим чек-лист:
+
+| Готовность | Пункт | Статус (✔/✘) | Комментарий |
+| :--- | :--- | :--- | :--- |
+| **PostgreSQL** | `wal_level = logical` | ✔ | Уже установлено. |
+| | Пользователь имеет `REPLICATION` право | | Проверить запросом. |
+| | Пользователь имеет `SELECT` на `dbo.constants` | | Проверить запросом. |
+| | Существует публикация для нужных таблиц | | Создать `flink_pub`. |
+| **Конфиг YAML** | `source.slot.name` задано (опционально) | | Рекомендую задать: `flink_cdc_slot`. |
+| | `source.publication.name` задано (опционально) | | Если создали публикацию вручную, укажите `flink_pub`. |
+| | `debezium.snapshot.mode` задан | | Рекомендую `initial`. |
+| | `debezium.heartbeat.interval.ms` задан | | **Критически важно!** Укажите `10000`. |
+
+### 🚀 Шаг 5: Запуск и наблюдение
+После настройки PostgreSQL и корректировки YAML запускайте пайплайн командой `flink-cdc.sh`.
+
+**Что наблюдать в PostgreSQL после запуска:**
+```sql
+-- Слот должен появиться и стать активным (active = t)
+SELECT slot_name, active FROM pg_replication_slots;
+
+-- В логах PostgreSQL (часто /var/log/postgresql/postgresql-XX-main.log)
+-- можно увидеть сообщения о подключении репликационного воркера.
+```
+
+Если слот не создаётся или пайплайн падает с ошибкой прав, проверьте, что вы дали право **`REPLICATION`** именно той роли, под которой коннектор подключается к базе (в вашем YAML это `supersetuser`).
+
+Таким образом, последовательность документирования будет ясной: **Проверка -> Настройка прав -> Создание публикации -> Запуск и верификация**. Этот процесс можно оформить как внутреннюю инструкцию для вашей команды.
 
 
 
