Update 007 Размышления по поводу выбора технологии синхронизации.md

--- a/006 Integration/Apache Flink/007 Размышления по поводу выбора технологии синхронизации.md
+++ b/006 Integration/Apache Flink/007 Размышления по поводу выбора технологии синхронизации.md
@@ -27,6 +27,7 @@
 Выбор между ними зависит от вашей готовности брать на себя роль оркестратора и разработчика логики восстановления и отслеживания состояния.
 
 ### 📊 Сравнение двух подходов на уровне ответственности
+[Postgres CDC Connector](https://nightlies.apache.org/flink/flink-cdc-docs-master/docs/connectors/flink-sources/postgres-cdc/)
 
 Чтобы было наглядно, вот таблица, которая показывает, как распределяется ответственность в каждой архитектуре.
 
