Update 007 Несколько таблиц на одном слоте рабочий вариант.md

--- a/006 Integration/Apache Flink/Practice/007 Несколько таблиц на одном слоте рабочий вариант.md
+++ b/006 Integration/Apache Flink/Practice/007 Несколько таблиц на одном слоте рабочий вариант.md
@@ -4,6 +4,8 @@
 > отсюда идея предварительно захватить данные, отпустив источник
 > а уже потом разобрать их по направлениям
 
+##### ...\Work\Tasks\CS-28826 РТК. Настроить BI на demo стенде\cdc\Apache Flink\Test\Streaming ELT from PostgreSQL to StarRocks with Flink SQL one PG slot to many tables threding.sql
+
 А, вот теперь я понимаю корень проблемы!   
 Вы говорите про **механизм чтения данных в PostgreSQL CDC**, который действительно работает так: когда слот репликации вычитывает изменения, они "исчезают" для других потребителей.
 
